--- a/Final/dnn.ipynb
+++ b/Final/dnn.ipynb
@@ -44,114 +44,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def rollingWindow(window_size=80, step_size=20):\n",
-    "    activities_path = 'Activity'\n",
-    "    activity_segments = {}\n",
-    "\n",
-    "    # Iterate over each activity's folder\n",
-    "    for activity_name in os.listdir(activities_path):\n",
-    "        print(activity_name)\n",
-    "        activity_folder = os.path.join(activities_path, activity_name)\n",
-    "        if os.path.isdir(activity_folder):\n",
-    "            # Store segments for each activity\n",
-    "            activity_segments[activity_name] = []\n",
-    "            \n",
-    "            # Iterate over each CSV file within the activity's folder\n",
-    "            for filename in os.listdir(activity_folder):\n",
-    "                if filename.endswith('.csv'):\n",
-    "                    file_path = os.path.join(activity_folder, filename)\n",
-    "                    \n",
-    "                    # Read  CSV file\n",
-    "                    df = pd.read_csv(file_path)\n",
-    "                    \n",
-    "                    # Normalize data\n",
-    "                    df_normalized = normalize(df)\n",
-    "                    \n",
-    "                    # Segment the data using a rolling window\n",
-    "                    segments = segment(df_normalized, window_size, step_size)\n",
-    "                    \n",
-    "                    # Append the segments to the activity's list\n",
-    "                    activity_segments[activity_name].extend(segments)\n",
-    "\n",
-    "    return activity_segments\n",
-    "\n",
-    "def featuresAndLabels(activity_segments, len):\n",
-    "    X = []  # Features\n",
-    "    y = []  # Labels\n",
-    "    activity_to_label = {activity: i for i, activity in enumerate(activity_segments.keys())}\n",
-    "\n",
-    "    for activity, segments in activity_segments.items():\n",
-    "        for segment in segments:\n",
-    "            if segment.shape == (len, 3):  # Adjust based off how many sec\n",
-    "                X.append(segment)\n",
-    "            else:\n",
-    "                print(f\"Segment with shape {segment.shape} does not match the expected shape and will be skipped.\")\n",
-    "            # Append the label\n",
-    "            y.append(activity_to_label[activity])\n",
-    "\n",
-    "    # Convert lists to NumPy arrays\n",
-    "    X = np.array(X, dtype=object)  \n",
-    "    y = np.array(y)\n",
-    "    return X, y\n",
-    "\n",
-    "def getModel(activity_segments, len):\n",
-    "    # num_classes = len(activity_segments.keys())\n",
-    "    # Define the model\n",
-    "    model = Sequential([\n",
-    "        # First LSTM layer returns sequences to feed into the next LSTM layer\n",
-    "        LSTM(64, return_sequences=True, input_shape=(len, 3)),  # Adjust 'input_shape' as needed based on your data\n",
-    "        # Second LSTM layer, also returning sequences\n",
-    "        LSTM(64, return_sequences=True),\n",
-    "        # Third LSTM layer, does not need to return sequences\n",
-    "        LSTM(64),\n",
-    "        # Add Dense layers for classification\n",
-    "        Dense(64, activation='relu'),\n",
-    "        Dense(num_classes, activation='softmax')  # 'num_classes' should be set to the number of activities you are classifying\n",
-    "    ])\n",
-    "\n",
-    "    # Compile the model\n",
-    "    model.compile(optimizer='adam',  # You can adjust the optimizer, learning rate, etc.\n",
-    "                loss='sparse_categorical_crossentropy',\n",
-    "                metrics=['accuracy'])\n",
-    "\n",
-    "    # Display the model's architecture\n",
-    "    model.summary()\n",
-    "    return model\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# len = 32*5\n",
-    "# fivesecactivity = rollingWindow(len, int((32*5)*.25))\n",
-    "# fivesecnum_classes = len(fivesecactivity.keys())\n",
-    "# fivesec_X, fivesec_y = featuresAndLabels(fivesecactivity, len)\n",
-    "# X_train_val, X_test, y_train_val, y_test = train_test_split(fivesec_X, fivesec_y, test_size=0.15, random_state=42)\n",
-    "# # Further split training+validation data into training and validation data\n",
-    "# X_train, X_val, y_train, y_val = train_test_split(X_train_val, y_train_val, test_size=0.15, random_state=42)\n",
-    "# X_train_padded = pad_sequences(X_train, padding='post', maxlen=len) \n",
-    "# X_val_padded = pad_sequences(X_val, padding='post', maxlen=len)\n",
-    "# X_test_padded = pad_sequences(X_test, maxlen=len, padding='post')\n",
-    "# model = getModel(fivesecactivity, 32*5)\n",
-    "# history = model.fit(X_train_padded, y_train,\n",
-    "#                     validation_data=(X_val_padded, y_val),\n",
-    "#                     epochs=30,  # Adjust the number of epochs based on your observation of the training and validation loss/accuracy\n",
-    "#                     batch_size=64)\n",
-    "\n",
-    "# # Evaluate the model on the test set\n",
-    "# test_loss, test_acc = model.evaluate(X_test_padded, y_test)\n",
-    "# print(f\"Test Accuracy: {test_acc}, Test Loss: {test_loss}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -241,74 +133,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# X_train_val, X_test, y_train_val, y_test = train_test_split(X, y, test_size=0.15, random_state=42)\n",
-    "\n",
-    "# # Split training+validation data into training and validation data\n",
-    "# X_train, X_val, y_train, y_val = train_test_split(X_train_val, y_train_val, test_size=0.15, random_state=42)# Number of features in your input data\n",
-    "# # input_shape = window_size * 3  # For X, Y, Z axes\n",
-    "# # # Number of distinct activities\n",
-    "# # num_classes = len(activity_segments.keys())\n",
-    "\n",
-    "# # model = Sequential([\n",
-    "# #     Flatten(input_shape=(input_shape,)),  # Adjust 'input_shape' as necessary\n",
-    "# #     Dense(128, activation='relu'),\n",
-    "# #     Dropout(0.5),\n",
-    "# #     Dense(64, activation='relu'),\n",
-    "# #     Dense(num_classes, activation='softmax')  # 'num_classes' should match the number of activities\n",
-    "# # ])\n",
-    "\n",
-    "# # model.compile(optimizer=legacy.Adam(learning_rate=0.001),\n",
-    "# #               loss='sparse_categorical_crossentropy',\n",
-    "# #               metrics=['accuracy'])\n",
-    "# num_classes = len(activity_segments.keys())\n",
-    "# model = Sequential([\n",
-    "#     Flatten(input_shape=(80,3)),  # Updated input shape to match the data\n",
-    "#     Dense(128, activation='ELU'),\n",
-    "#     Dropout(0.5),\n",
-    "#     Dense(64, activation='ELU'),\n",
-    "#     Dense(num_classes, activation='softmax')  # Ensure num_classes matches the number of your activities\n",
-    "# ])\n",
-    "\n",
-    "# model.compile(optimizer=legacy.Adam(learning_rate=0.001),\n",
-    "#               loss='sparse_categorical_crossentropy',\n",
-    "#               metrics=['accuracy'])\n",
-    "# model.summary()\n",
-    "# history = model.fit(X_train, y_train,\n",
-    "#                     validation_data=(X_val, y_val),\n",
-    "#                     epochs=20,  # Adjust the number of epochs as needed\n",
-    "#                     batch_size=64)  # And the batch size as well"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# num_features = 3  # For X, Y, Z axes of accelerometer data\n",
-    "# time_steps = 80  # Based on your window size\n",
-    "# num_classes = len(activity_segments.keys())\n",
-    "# model = Sequential([\n",
-    "#     LSTM(64, input_shape=(time_steps, num_features), return_sequences=True),\n",
-    "#     LSTM(32, return_sequences=False),\n",
-    "#     Dense(64, activation='relu'),\n",
-    "#     Dense(num_classes, activation='softmax')  # num_classes is the number of activities\n",
-    "# ])\n",
-    "\n",
-    "# model.compile(optimizer=legacy.Adam(learning_rate=0.001),\n",
-    "#               loss='sparse_categorical_crossentropy',\n",
-    "#               metrics=['accuracy'])\n",
-    "\n",
-    "# model.summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [],
@@ -320,8 +144,7 @@
     "\n",
     "for activity, segments in activity_segments.items():\n",
     "    for segment in segments:\n",
-    "        # Ensure the segment is in the correct shape, e.g., (256, 3) for 256 timesteps and 3 features (X, Y, Z)\n",
-    "        if segment.shape == (len, 3):  # Adjust (256, 3) based on your actual expected segment shape\n",
+    "        if segment.shape == (len, 3):\n",
     "            X.append(segment)\n",
     "        else:\n",
     "            # Handle segments that don't match the expected shape, possibly with padding, trimming, or ignoring\n",
@@ -341,7 +164,6 @@
    "outputs": [],
    "source": [
     "X_train_val, X_test, y_train_val, y_test = train_test_split(X, y, test_size=0.15, random_state=42)\n",
-    "# Further split training+validation data into training and validation data\n",
     "X_train, X_val, y_train, y_val = train_test_split(X_train_val, y_train_val, test_size=0.15, random_state=42)\n",
     "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
     "X_train_padded = pad_sequences(X_train, padding='post', maxlen=len) \n",
@@ -489,114 +311,6 @@
    "metadata": {},
    "source": [
     "## 64 BATCH SIZE produces the best results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len = 160\n",
-    "# fivesecactivity = rollingWindow(len, 40)\n",
-    "fivesecactivity = activity_segments\n",
-    "fivesecnum_classes = num_classes ## len(fivesecactivity.keys())\n",
-    "fivesec_X, fivesec_y = featuresAndLabels(fivesecactivity, len)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "X_train_val, X_test, y_train_val, y_test = train_test_split(fivesec_X, fivesec_y, test_size=0.15, random_state=42)\n",
-    "# Further split training+validation data into training and validation data\n",
-    "X_train, X_val, y_train, y_val = train_test_split(X_train_val, y_train_val, test_size=0.15, random_state=42)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "X_train_padded = pad_sequences(X_train, padding='post', maxlen=len) \n",
-    "X_val_padded = pad_sequences(X_val, padding='post', maxlen=len)\n",
-    "X_test_padded = pad_sequences(X_test, maxlen=len, padding='post')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"sequential\"\n",
-      "_________________________________________________________________\n",
-      " Layer (type)                Output Shape              Param #   \n",
-      "=================================================================\n",
-      " lstm (LSTM)                 (None, 160, 64)           17408     \n",
-      "                                                                 \n",
-      " lstm_1 (LSTM)               (None, 160, 64)           33024     \n",
-      "                                                                 \n",
-      " lstm_2 (LSTM)               (None, 64)                33024     \n",
-      "                                                                 \n",
-      " dense (Dense)               (None, 64)                4160      \n",
-      "                                                                 \n",
-      " dense_1 (Dense)             (None, 34)                2210      \n",
-      "                                                                 \n",
-      "=================================================================\n",
-      "Total params: 89826 (350.88 KB)\n",
-      "Trainable params: 89826 (350.88 KB)\n",
-      "Non-trainable params: 0 (0.00 Byte)\n",
-      "_________________________________________________________________\n"
-     ]
-    }
-   ],
-   "source": [
-    "model = getModel(fivesecactivity, 32*5)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "history = model.fit(X_train_padded, y_train,\n",
-    "                    validation_data=(X_val_padded, y_val),\n",
-    "                    epochs=30,  # Adjust the number of epochs based on your observation of the training and validation loss/accuracy\n",
-    "                    batch_size=64)\n",
-    "\n",
-    "# Evaluate the model on the test set\n",
-    "test_loss, test_acc = model.evaluate(X_test_padded, y_test)\n",
-    "print(f\"Test Accuracy: {test_acc}, Test Loss: {test_loss}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "160"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "32*5"
    ]
   },
   {
